--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
 
   <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top d-flex justify-content-center align-items-center header-transparent">
+  <header id="header" class="fixed-top  header-transparent">
 
     <nav id="navbar" class="navbar">
       <ul>
