--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@
                         class="bi bi-instagram"></i></a>
                     <!-- <a href="#" class="google-plus"><i class="bi bi-skype"></i></a> -->
                     <a href="https://www.linkedin.com/in/sinan-b-h-504872310/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://github.com/sinan-bh/personal_web" class="linkedin"><i class="bi bi-github"></i></a>
                   </div>
                 </div>
               </div>
@@ -287,6 +288,7 @@
         <a href="https://www.instagram.com/_s_ina_n._/" class="instagram"><i class="bx bxl-instagram"></i></a>
         <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
         <a href="https://www.linkedin.com/in/sinan-b-h-504872310/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://github.com/sinan-bh/personal_web" class="linkedin"><i class="bx bxl-github"></i></a>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>Sinan</span></strong>. All Rights Reserved
