--- a/index.html
+++ b/index.html
@@ -121,10 +121,18 @@
                   </div>
                 </div>
 
-                <div class="progress">
-                  <span class="skill">JavaScript <i class="val">85%</i></span>
+                 <div class="progress">
+                  <span class="skill">React.JS <i class="val">95%</i></span>
                   <div class="progress-bar-wrap">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0"
+                      aria-valuemax="100"></div>
+                  </div>
+                </div>
+
+                <div class="progress">
+                  <span class="skill">JavaScript <i class="val">95%</i></span>
+                  <div class="progress-bar-wrap">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
                 </div>
@@ -137,13 +145,6 @@
                   </div>
                 </div>
 
-                <div class="progress">
-                  <span class="skill">Java <i class="val">60%</i></span>
-                  <div class="progress-bar-wrap">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0"
-                      aria-valuemax="100"></div>
-                  </div>
-                </div>
               </div>
             </div>
           </div>
