--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
 
   <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top d-flex justify-content-center align-items-center header-transparent">
+  <header id="header" class="fixed-top   header-transparent">
 
     <nav id="navbar" class="navbar">
       <ul>
@@ -106,9 +106,9 @@
 
               <div class="skills-content ps-lg-4">
                 <div class="progress">
-                  <span class="skill">HTML <i class="val">95%</i></span>
+                  <span class="skill">HTML <i class="val">100%</i></span>
                   <div class="progress-bar-wrap">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
                 </div>
@@ -122,6 +122,14 @@
                 </div>
 
                 <div class="progress">
+                  <span class="skill">React JS <i class="val">95%</i></span>
+                  <div class="progress-bar-wrap">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0"
+                      aria-valuemax="100"></div>
+                  </div>
+                </div>
+
+                <div class="progress">
                   <span class="skill">JavaScript <i class="val">85%</i></span>
                   <div class="progress-bar-wrap">
                     <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0"
@@ -130,20 +138,14 @@
                 </div>
 
                 <div class="progress">
-                  <span class="skill">Python <i class="val">75%</i></span>
+                  <span class="skill">Python <i class="val">85%</i></span>
                   <div class="progress-bar-wrap">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
                 </div>
 
-                <div class="progress">
-                  <span class="skill">Java <i class="val">60%</i></span>
-                  <div class="progress-bar-wrap">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0"
-                      aria-valuemax="100"></div>
-                  </div>
-                </div>
+              
               </div>
             </div>
           </div>
@@ -162,12 +164,14 @@
 
         <div class="row">
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0 ">
+            <a href="https://furnicture-e-commerce.vercel.app/">
             <div class="icon-box rounded-4">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
               <h4 class="title"><a href="">eCOMMERCE</a></h4>
               <p class="description">"An e-commerce website offering a wide range of products with easy navigation
                 and secure checkout for a seamless shopping experience."</p>
             </div>
+          </a>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
@@ -223,6 +227,7 @@
                         class="bi bi-instagram"></i></a>
                     <!-- <a href="#" class="google-plus"><i class="bi bi-skype"></i></a> -->
                     <a href="https://www.linkedin.com/in/sinan-b-h-504872310/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://github.com/sinan-bh/personal_web" class="github"><i class="bi bi-github"></i></a>
                   </div>
                 </div>
               </div>
@@ -287,6 +292,7 @@
         <a href="https://www.instagram.com/_s_ina_n._/" class="instagram"><i class="bx bxl-instagram"></i></a>
         <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
         <a href="https://www.linkedin.com/in/sinan-b-h-504872310/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://github.com/sinan-bh/personal_web" class="linkedin"><i class="bx bxl-github"></i></a>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>Sinan</span></strong>. All Rights Reserved
